examples/java/failing/preserve_order_in_commutative_additions/Expected.java
class MyCls {
        int a;
        //! this is b
        int b;
        //! this is c
        int c;
        //! this is d
        int d;
        //! this is e
        int e;
}
